# SwingFilter

./: README.md
CPU Implementation/C++/: CountMin.cpp  LogLogFilter.cpp  README.md  main.cpp
CPU Implementation/C++/header/: CountMin.h  LogLogFilter.h  Sketch.h
CPU Implementation/Cpp/: ASketch.cpp  BounceFilter.cpp  CMakeLists.txt  ColdFilter.cpp  CountMin.cpp  LogLogFilter.cpp  README.md  SwingFilter.cpp  main.cpp
CPU Implementation/Cpp/header/: ASketch.h  BounceFilter.h  ColdFilter.h  SwingFilter.h
CPU Implementation/Python/: Exp_Flow_Size_Estimation_.py  Exp_Heavy_Change_Detection_.py  Exp_Heavy_Hitter_Detection_.py  Exp_Top_k_Query_.py  README.md
CPU Implementation/Python/filters/: BounceFilter.py  ColdFilter.py  LadderFilter.py  LogLogFilter.py  SwingFilter.py
CPU Implementation/Python/sketches/: CMHeap.py  CUSketch.py  CountMin.py  CountSketch.py  ElasticSketch.py  SpaceSaving.py  WavingSketch.py
FPGA Implementation/: BounceFilter_FPGA.cpp  MurmurHash3.cpp  MurmurHash3.h  README.md
FPGA Implementation/Verilog/: update.v  update_B1.v  update_B2.v  update_C.v  update_MurmurHash3_x86_32_1.v  update_XOR.v  update_mul_32s_30ns_32_1_1.v  update_mul_32s_31s_32_1_1.v  update_mul_32s_32s_32_1_1.v  update_mul_8ns_30ns_32_1_1.v  update_mul_8ns_31s_32_1_1.v  update_urem_32ns_16ns_32_36_seq_1.v  update_urem_32ns_17ns_16_36_seq_1.v  update_urem_32ns_17ns_32_36_seq_1.v  update_urem_32ns_3ns_2_36_seq_1.v
P4 Implementation/: BF-controller.py  README.md
data/: README.md
